
syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/fadedreams/gofinanceflow/pb";

message LoginUserRequest {
    string username = 1;
    string password = 2;
}

message LoginUserResponse {
    string token = 1;
    string refresh_token = 2;
    User user = 3;
}
